--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,7 +29,7 @@ header{
     font-style: 2em;
     background-color: rgba(0, 0, 0, 0.396);
     border-color: rgba(0, 0, 0, 0.396);
-    color: white;
+    color: #ffffff;
 
 }
 #hero-body #top-modal:hover{
